--- a/Twitch.theme.css
+++ b/Twitch.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Twitch_Theme","description":"Regular Twitch Theme","author":"DevilsTheAvenged","version":"1.2"}*//{}
+//META{"name":"Twitch_Theme","description":"Regular Twitch Theme","author":"DevilsTheAvenged","version":"1.3"}*//{}
 @import url('https://fonts.googleapis.com/css?family=Marvel');
 .app {
 	background-image: url("https://images8.alphacoders.com/702/thumb-1920-702959.jpg");
@@ -891,54 +891,59 @@ a,
 .theme-dark .searchFilter-1fJ0cd {
     background-color: #503483;
 }
-.theme-dark .search-popout {
+.theme-dark .searchPopout-38pRYh {
     box-shadow: none;
 }
-.search-popout {
+.theme-dark .searchPopout-38pRYh {
     background-color: black;
     border: none;
     border-radius: 0px;
     box-shadow: none;
 }
-.search-popout .option:after,
+.option-1MvVr1:after,
 .search-popout .option:before {
     background: black;
 }
 .search-popout .results-group:before {
     border-top: none;
 }
-.search-popout .option.selected {
+.search-popout .option.selected,
+.theme-dark .option-1MvVr1.selected-_bTXUG {
     background-color:#503483;
 }
-.search-popout .option.selected:after {
+.option-1MvVr1.selected-_bTXUG:after,
+.theme-dark .option-1MvVr1.selected-_bTXUG {
     background: #503483;
 }
+.theme-dark .searchOption-vKNX73 .filter-3kZ3tT, .theme-dark .option-1MvVr1 .filter-3kZ3tT {
+   color: white !important;
+   font-weight: bold;
+}
+.theme-dark .searchOption-vKNX73 .answer-9L5NhD,
+.theme-dark .searchQuery-3o17HL {
+   color: white;
+}
 .search-popout .option.selected:before,
-.search-popout .option.selected:after {
+.option-1MvVr1.selected-_bTXUG:after,
+.theme-dark .option-1MvVr1.selected-_bTXUG {
     background-color:  #503483;
 }
 .search-popout .search-option .filter,
 .search-popout .option .answer,
-.search-popout .option strong {
+.theme-dark .option-1MvVr1 strong{
     color: white;
 }
-.search-popout .date-picker .date-picker-hint .hint-value {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz .hintValue-45YyWZ {
     background-color: #3c2762;
 }
-.search-popout .date-picker .date-picker-hint .hint-value:hover {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz .hintValue-45YyWZ:hover {
     background-color: #503483;
 }
-.search-popout .date-picker {
-    border-radius: 0;
-    border-top: none;
-    box-shadow: none;
-}
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker, 
-.theme-light .calendarPicker-16Q6sl .react-datepicker {
+
+.theme-dark .calendarPicker-16Q6sl .react-datepicker {
     background-color: black;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__current-month, 
-.theme-light .calendarPicker-16Q6sl .react-datepicker__current-month {
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__current-month {
     border-bottom-color: transparent;
     color: white;
     background-color: black;
@@ -950,12 +955,11 @@ a,
 .theme-light .calendarPicker-16Q6sl .react-datepicker__day-name {
     color: white;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__header, 
-.theme-light .calendarPicker-16Q6sl .react-datepicker__header {
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__header {
     background-color: black;
     border-color: transparent;
 }
-.search-popout .date-picker .date-picker-hint {
+.theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz {
     border-top: none;
 }
 .theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day--outside-month, 
@@ -982,9 +986,8 @@ a,
 .theme-dark .react-datepicker__day.react-datepicker__day--sat.react-datepicker__day--outside-month:hover {
      background-color: #1e1331 !important;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after, 
-.theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after {
-    background-color: transparent;
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:after {
+   background-color: transparent;
 }
 .theme-dark .react-datepicker__day.react-datepicker__day--sun.react-datepicker__day--disabled.react-datepicker__day--outside-month:hover,
 .theme-dark .react-datepicker__day.react-datepicker__day--mon.react-datepicker__day--disabled.react-datepicker__day--outside-month:hover,
@@ -1002,18 +1005,15 @@ a,
     color: rgba(255,255,255,.3);
     border: none;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:hover, 
-.theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:hover {
+.calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:hover {
     background-color: #5a3a93;
     color: #fff;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day:hover,  
-.theme-light .calendarPicker-16Q6sl .react-datepicker__day:hover {
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--selected:hover, .theme-dark .calendarPicker-16Q6sl .react-datepicker__day:hover {
     background-color: #462d72;
     color: #fff;
 }
-.theme-dark .theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--disabled,
-.theme-light .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--disabled {
+.theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--disabled, .theme-dark .calendarPicker-16Q6sl .react-datepicker__day.react-datepicker__day--disabled:hover {
       color: rgba(255,255,255,.3);
       background: #462d72;
       border: none;
